# chocolate-doom-launcher

./: CMDLINE  Makefile.am  Makefile.in  aclocal.m4  config.h  config.hin  configure  configure.in  rpm.spec
launcher/: Makefile.am  gtk-minimal.xml  gtk.c  gtk.xml  launcher-res.rc.in  launcher.c  launcher.h
man/: Makefile.in  chocolate-doom.6  chocolate-doom.cfg.5
pcsound/: Makefile.in
pkg/: Makefile.in
setup/: Makefile.in  execute.c  setup-res.rc
src/: Makefile.in  resource.rc
textscreen/: Makefile.in
textscreen/examples/: Makefile.in
wince/: Makefile.in
